add images file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
       <div class="background-box">
         <!-- Monkey Image -->
         <div class="monkey">
-          <img src="monkey-face.png" alt="monkey-face" class="monkey-img" />
+          <img
+            src="Images/monkey-face.png"
+            alt="monkey-face"
+            class="monkey-img"
+          />
         </div>
         <!-- Hidden Monkey Image -->
         <div class="monkey-hide">
           <img
-            src="monkey-face-hidden.png"
+            src="Images/monkey-face-hidden.png"
             alt="monkey-face-hidden"
             class="hidden-monkey-img"
           />
