--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       </div>
     </div>
 
+    <!-- Footer section -->
+    <footer>Copyright © 2023 YD-SavvyDev</footer>
+
     <!-- Import JavaScript file -->
     <script src="script.js"></script>
   </body>
