--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Footer section -->
-    <footer>Copyright © 2023 YD-SavvyDev</footer>
+    <footer>Copyright © 2023 Yoni-Deserbaix</footer>
 
     <!-- Import JavaScript file -->
     <script src="script.js"></script>
